Added option to disable showing message popups

--- a/MessageCenter/MessageCenter.csproj
+++ b/MessageCenter/MessageCenter.csproj
@@ -45,5 +45,11 @@
     <Compile Include="MessageCenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConfigurationManager\ConfigurationManager.csproj">
+      <Project>{d56dd83d-7471-463f-b4ff-8910a335833c}</Project>
+      <Name>ConfigurationManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
