Moved loading of gachi clips to bgmloader

--- a/BGMLoader/BGMLoader.csproj
+++ b/BGMLoader/BGMLoader.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <HintPath>..\lib\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
@@ -58,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AudioLoader.cs" />
     <Compile Include="BGMLoader.cs" />
+    <Compile Include="Hooks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
