Fix 0harmony.dll having copylocal set

--- a/BGMLoader/BGMLoader.csproj
+++ b/BGMLoader/BGMLoader.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\lib\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
