--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,4 @@ lib/TextMeshPro-1.0.55.56.0b12.dll
 lib/UnityEngine.dll
 lib/UnityEngine.UI.dll
 lib/BepInEx.dll
+/ConfigurationManager/ConfigurationManager.csproj.DotSettings
