--- a/ConfigurationManager/ConfigurationManager.csproj
+++ b/ConfigurationManager/ConfigurationManager.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Interface\AcceptableValueListAttribute.cs" />
     <Compile Include="Interface\AcceptableValueRangeAttribute.cs" />
     <Compile Include="Interface\AdvancedAttribute.cs" />
+    <Compile Include="Interface\CustomSettingDrawAttribute.cs" />
     <Compile Include="Utilities\ComboBox.cs" />
     <Compile Include="ConfigurationManager.cs" />
     <Compile Include="Interface\KeyboardShortcut.cs" />
