--- a/Sideloader/Sideloader.csproj
+++ b/Sideloader/Sideloader.csproj
@@ -73,6 +73,7 @@
     <Compile Include="AutoResolver\ResolveInfo.cs" />
     <Compile Include="AutoResolver\StructReference.cs" />
     <Compile Include="AutoResolver\StructValue.cs" />
+    <Compile Include="AutoResolver\StudioObjectSearch.cs" />
     <Compile Include="AutoResolver\UniversalAutoResolver.cs" />
     <Compile Include="BundleManager.cs" />
     <Compile Include="Hooks.cs" />
