--- a/Screencap/Screencap.csproj
+++ b/Screencap/Screencap.csproj
@@ -64,10 +64,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Renderers\AlphaShot2.cs" />
-    <Compile Include="Scaling\Lanczos.cs" />
-    <Compile Include="Scaling\ScaleImage.cs" />
-    <Compile Include="Scaling\ScaleUnityTexture.cs" />
-    <Compile Include="Scaling\SColor.cs" />
     <Compile Include="ScreenshotManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -86,6 +82,7 @@
     <None Include="Resources\blackout.unity3d" />
     <None Include="shader_source\alphaMask.shader" />
     <None Include="shader_source\blackout.shader" />
+    <None Include="shader_source\ddt-jinc2.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
