--- a/ConfigurationManager/ConfigurationManager.csproj
+++ b/ConfigurationManager/ConfigurationManager.csproj
@@ -68,5 +68,6 @@
     <Compile Include="Utilities\FieldToPropertyInfoWrapper.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
