--- a/DeveloperConsole/DeveloperConsole.csproj
+++ b/DeveloperConsole/DeveloperConsole.csproj
@@ -54,6 +54,7 @@
       <Name>ConfigurationManager</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
