--- a/DynamicTranslationLoader/DynamicTranslationLoader.csproj
+++ b/DynamicTranslationLoader/DynamicTranslationLoader.csproj
@@ -87,6 +87,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
