--- a/ResourceRedirector/ResourceRedirector.csproj
+++ b/ResourceRedirector/ResourceRedirector.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ResourceRedirector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
