--- a/ColorCorrector/ColorCorrector.csproj
+++ b/ColorCorrector/ColorCorrector.csproj
@@ -62,6 +62,7 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
