--- a/SliderUnlocker/SliderUnlocker.csproj
+++ b/SliderUnlocker/SliderUnlocker.csproj
@@ -71,6 +71,7 @@
       <Name>ConfigurationManager</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
