--- a/Sideloader/Sideloader.csproj
+++ b/Sideloader/Sideloader.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AutoResolver\UniversalAutoResolver.cs" />
     <Compile Include="BundleManager.cs" />
     <Compile Include="Hooks.cs" />
+    <Compile Include="Lazy.cs" />
     <Compile Include="Manifest.cs" />
     <Compile Include="ManifestVersionComparer.cs" />
     <Compile Include="Sideloader.cs" />
