--- a/ConfigurationManagerKK/ConfigurationManagerKK.csproj
+++ b/ConfigurationManagerKK/ConfigurationManagerKK.csproj
@@ -4,17 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D56DD83D-7471-463F-B4FF-8910A335833C}</ProjectGuid>
+    <ProjectGuid>{8589072C-44CB-4F6E-92E7-D73A42C31D69}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConfigurationManager</RootNamespace>
-    <AssemblyName>ConfigurationManager</AssemblyName>
+    <RootNamespace>ConfigurationManagerKK</RootNamespace>
+    <AssemblyName>ConfigurationManagerKK</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>none</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\BepInEx\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -22,7 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\BepInEx\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -30,8 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BepInEx, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="BepInEx">
       <HintPath>..\lib\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
@@ -41,25 +45,21 @@
       <HintPath>..\lib\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\lib\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BepInExSettings.cs" />
-    <Compile Include="Interface\AcceptableValueBaseAttribute.cs" />
-    <Compile Include="Interface\AcceptableValueListAttribute.cs" />
-    <Compile Include="Interface\AcceptableValueRangeAttribute.cs" />
-    <Compile Include="Interface\AdvancedAttribute.cs" />
-    <Compile Include="Interface\CustomSettingDrawAttribute.cs" />
-    <Compile Include="Utilities\ComboBox.cs" />
-    <Compile Include="ConfigurationManager.cs" />
-    <Compile Include="Interface\KeyboardShortcut.cs" />
+    <Compile Include="ConfigurationManagerKK.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Interface\SavedKeyboardShortcut.cs" />
-    <Compile Include="SettingEntry.cs" />
-    <Compile Include="SettingEntryBase.cs" />
-    <Compile Include="SettingFieldDrawer.cs" />
-    <Compile Include="Utilities\FieldToPropertyInfoWrapper.cs" />
-    <Compile Include="Utilities\Utilities.cs" />
-    <Compile Include="ValueChangedEventArgs.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConfigurationManager\ConfigurationManager.csproj">
+      <Project>{d56dd83d-7471-463f-b4ff-8910a335833c}</Project>
+      <Name>ConfigurationManager</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
