--- a/Sideloader/Sideloader.csproj
+++ b/Sideloader/Sideloader.csproj
@@ -67,6 +67,10 @@
       <HintPath>..\lib\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\lib\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoResolver\Hooks.cs" />
