Added ability to change format of screenshot filenames

--- a/Screencap/Screencap.csproj
+++ b/Screencap/Screencap.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hooks.cs" />
+    <Compile Include="NameFormat.cs" />
     <Compile Include="Renderers\I360Render.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
